Added Simdjson, Created a printing project, abd removed the serialization project.

--- a/Printing/Printing.vcxproj.filters
+++ b/Printing/Printing.vcxproj.filters
@@ -13,27 +13,10 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Source Files\simdjson">
-      <UniqueIdentifier>{bac889c8-eefc-4e4a-b4a4-c5d640af208d}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Preprocessor.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Dependencies\simdjson\simdjson.cpp">
-      <Filter>Source Files\simdjson</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Reflection.h">
+    <ClCompile Include="Printing.hpp">
       <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Preprocessor.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
+    </ClCompile>
   </ItemGroup>
 </Project>
