More progress on Preprocessor added string masking/unmasking aswell as space normalization and basic tokenizer. Added a timer class and added more test cases to client. Found that RemoveComments does not account for characters

--- a/Preprocessor/Preprocessor.vcxproj.filters
+++ b/Preprocessor/Preprocessor.vcxproj.filters
@@ -35,5 +35,11 @@
     <ClInclude Include="Preprocessor.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Serializer.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Timer.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
