--- a/Preprocessor/Preprocessor.vcxproj
+++ b/Preprocessor/Preprocessor.vcxproj
@@ -154,6 +154,8 @@
   <ItemGroup>
     <ClInclude Include="Preprocessor.hpp" />
     <ClInclude Include="Reflection.h" />
+    <ClInclude Include="Serializer.hpp" />
+    <ClInclude Include="Timer.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
