--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="Random.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="main.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
