--- a/Printing/Printing.vcxproj.filters
+++ b/Printing/Printing.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="Printing.hpp">
       <Filter>Header Files</Filter>
     </ClCompile>
+    <ClCompile Include="OutStream.hpp">
+      <Filter>Header Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Serializing.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Serializing-Gen.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
