--- a/Preprocessor/Preprocessor.vcxproj
+++ b/Preprocessor/Preprocessor.vcxproj
@@ -79,11 +79,11 @@
     <SourcePath>$(ProjectDir)Dependencies\simdjson;$(SourcePath)</SourcePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(ProjectDir)Dependencies\simdjson;$(SolutionDir)Printing;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)Dependencies\simdjson;$(SolutionDir)Printing;$(ProjectDir);$(IncludePath)</IncludePath>
     <SourcePath>$(ProjectDir)Dependencies\simdjson;$(SourcePath)</SourcePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(ProjectDir)Dependencies\simdjson;$(SolutionDir)Printing;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)Dependencies\simdjson;$(SolutionDir)Printing;$(ProjectDir);$(IncludePath)</IncludePath>
     <SourcePath>$(ProjectDir)Dependencies\simdjson;$(SourcePath)</SourcePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -153,7 +153,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Preprocessor.hpp" />
-    <ClInclude Include="Reflection.h" />
+    <ClInclude Include="Reflection.hpp" />
     <ClInclude Include="Timer.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
