--- a/Preprocessor/Preprocessor.vcxproj.filters
+++ b/Preprocessor/Preprocessor.vcxproj.filters
@@ -29,7 +29,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Reflection.h">
+    <ClInclude Include="Reflection.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Preprocessor.hpp">
